# grow-your-own-fractal

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  index.html  mise.toml
.claude/rules/: git-and-github.md
.github/workflows/: ci.yml  deploy.yml
crates/lsystem-app/: Cargo.toml
crates/lsystem-app/src/: camera.rs  fractal_renderer.rs  input.rs  lib.rs  main.rs  renderer.rs  shader.wgsl  ui.rs
crates/lsystem-core/: Cargo.toml
crates/lsystem-core/src/: alphabet.rs  config.rs  geometry.rs  grammar.rs  lib.rs
crates/lsystem-core/src/turtle/: mod.rs  turtle2d.rs
presets/: dragon_curve.toml  hilbert_curve.toml  koch_snowflake.toml  plant_a.toml  sierpinski_triangle.toml
