[package]
name = "lsystem-app"
version = "0.1.0"
edition = "2024"
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lsystem-core = { path = "../lsystem-core" }
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
wgpu = "29"
winit = "0.30"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11"
